<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewLayers.views.add.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:autofillHints="@string/title"/>

        <EditText
            android:id="@+id/content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:autofillHints="@string/content"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/low_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"/>
            <RadioButton android:id="@+id/def_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def"/>
            <RadioButton android:id="@+id/high_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"/>
        </RadioGroup>

        <View
            android:id="@+id/color"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:background="@color/black"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_whatshot"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/add_note"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_done"
        android:tint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>